docs: higlighted the properties which must never change when creating content model via code Also fixed some typos

--- a/docs/developer-docs/5.39.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/content-models-via-code.mdx
@@ -528,9 +528,14 @@ As we can see, like in the previous example, we're again utilizing the [`Context
 
 You can do what ever you want with the models via code. For that reason, there are things you need to be really careful about. We cannot prevent you from changing anything, so you need to be watchful for these pitfalls.
 
+<Alert type="danger">
+
 You should **never** change `modelId` property of the model definition.
 
-There are also few field properties which must **never** change, if you want to keep your data.
+There are also few field properties which must **never** change, if you want to keep your data. Please find these properties below.
+
+</Alert>
+
 
 Properties are:
 
