--- a/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
@@ -26,12 +26,12 @@ import apiPlayground from "./assets/private-model-api-playground.png";
 
 Content models are a main building block in Headless CMS. The first step to storing information in a Headless CMS is to create a [content model](/docs/{version}/user-guides/headless-cms/essentials/glossary#content-model).
 
-Let's delve into the details of both public and private models and how you can leverage them in Webiny.
+Let's delve into the details of both public and private models and explore how you can leverage them in Webiny.
 
 ## Public Models
 Public models in Webiny are those content models that are visible within the admin app. These models come with a generated navigation menu, allowing easy access to content entries through the user interface.
 
-Creating public models involves the conventional process of logging into the admin app and using the user interface to design a content model or with . The result is the automatic generation of an API, including a GraphQL type and a set of resolvers for seamless data interaction.
+Creating public models involves the conventional process of logging into the admin app and using the user interface to create a content model or you can also define public content model via code. The result is the automatic generation of an API, including a GraphQL type and a set of resolvers for seamless data interaction.
 Alternatively, you can also build public models through code using a [plugin](/docs/headless-cms/extending/content-models-via-code-storage-id).
 
 ## Private Models
