removed colon (:) from titles

--- a/docs/developer-docs/5.38.x/overview/features/audit-logs.mdx
+++ b/docs/developer-docs/5.38.x/overview/features/audit-logs.mdx
@@ -48,8 +48,8 @@ Users can view the full payload for each logged action within Audit Logs, gainin
 
 <Image src={alPayload} title="View the Payload" />
 
-## Benefits:
+## Benefits
 The introduction of Audit Logs marks a significant step forward in enhancing enterprise security and accountability within the Webiny ecosystem. By providing visibility into CMS activities, supporting compliance with industry regulations, and empowering users to track and analyze critical changes, Audit Logs become an essential component of any organization's security infrastructure.
 
-## Get Started:
+## Get Started
 If you are one of our Enterprise customers, reach out to our team to get started. We welcome your feedback and suggestions on how we can further enhance this application.
