--- a/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
+++ b/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
@@ -124,3 +124,9 @@ The account signup and verification process can be completed via https://portal.
 
 There could be various reasons why this error was thrown. But, if deploying from a Windows machine, we've seen that it could be
 caused by an anti-virus software that you might have installed on your machine. Our suggestion is to try to temporary disable it and see if that produces any positive outcome.
+
+## FAQ
+
+### Are there any prerequisite skills or specialized AWS knowledge required to deploy Webiny?
+
+To install Webiny, you will need a basic understanding of Node, Yarn, JavaScript, and terminal commands. While Webiny relies on many AWS services but you don't need to have in-depth knowledge of these services because Webiny has automated mechanisms to deploy, configure, and set up the entire system.
