docs: added 'Which AWS regions are supported by Webiny' FAQ

--- a/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
+++ b/docs/developer-docs/5.39.x/get-started/install-webiny.mdx
@@ -130,3 +130,7 @@ caused by an anti-virus software that you might have installed on your machine. 
 ### Are there any prerequisite skills or specialized AWS knowledge required to deploy Webiny?
 
 To install Webiny, you will need a basic understanding of Node, Yarn, JavaScript, and terminal commands. While Webiny relies on many AWS services but you don't need to have in-depth knowledge of these services because Webiny has automated mechanisms to deploy, configure, and set up the entire system.
+
+### Which AWS regions are supported by Webiny?
+
+Webiny supports all AWS regions except the China regions (Beijing and Ningxia) because Webiny relies on Amazon CloudFront and Amazon Cognito services, which are not available in [Beijing and Ningxia regions](https://www.amazonaws.cn/en/about-aws/regional-product-services/) respectively.
