docs: add reference field paragraph

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -11,6 +11,7 @@ import refreshedWebinyInfoCommand from "./assets/refreshed-webiny-info-command.p
 import improvedWebinyAboutCommand from "./assets/improved-webiny-about-command.png";
 import alwaysShowingProjectDetails from "./assets/always-showing-project-details.png";
 import wcpBadgeInAdmin from "./assets/wcp-badge-in-admin.png";
+import hcmsAcfReferenceField from "./assets/hcms-acf-reference-field.png";
 
 <GithubRelease version={"5.40.0"} />
 
@@ -23,6 +24,17 @@ With this release, we've removed a couple of backend JavaScript APIs that were m
 Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks.
 
 For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
+
+## Headless CMS
+
+### Support for Reference Fields in Advanced Search Filter ([#3783](https://github.com/webiny/webiny-js/pull/3783))
+
+With this release, we are enhancing our Advanced Search Filter Builder adding the support for **reference fields**.
+
+With the latest update, users now have the option to add reference fields in their search criteria using the easy-to-use Autocomplete input field. This means that users can search for the models that were defined during entry configuration and quickly select the referenced entry that best fits their requirements.
+
+<Image src={hcmsAcfReferenceField} title={"Advanced Search Filter's support for reference fields"} />
+
 
 ## Other Improvements
 
