docs: add duplicate page action paragraph

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -12,6 +12,7 @@ import improvedWebinyAboutCommand from "./assets/improved-webiny-about-command.p
 import alwaysShowingProjectDetails from "./assets/always-showing-project-details.png";
 import wcpBadgeInAdmin from "./assets/wcp-badge-in-admin.png";
 import hcmsAcfReferenceField from "./assets/hcms-acf-reference-field.png";
+import pbDuplicatePage from "./assets/pb-duplicate-page.png";
 
 <GithubRelease version={"5.40.0"} />
 
@@ -35,6 +36,15 @@ With the latest update, users now have the option to add reference fields in the
 
 <Image src={hcmsAcfReferenceField} title={"Advanced Search Filter's support for reference fields"} />
 
+## Page Builder
+
+### Add Duplicate List and Bulk Action ([#3876](https://github.com/webiny/webiny-js/pull/3876))
+
+With this update, we have added the highly requested "Duplicate page" action as both a bulk and list action.
+
+Previously, the functionality was available exclusively within the page details drawer. However, we've now extended this capability to make it more accessible and convenient for users, allowing them to duplicate multiple pages at once directly from the main interface.
+
+<Image src={pbDuplicatePage} title={"Duplicate list and bulk action"} />
 
 ## Other Improvements
 
