--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -12,6 +12,7 @@ import improvedWebinyAboutCommand from "./assets/improved-webiny-about-command.p
 import alwaysShowingProjectDetails from "./assets/always-showing-project-details.png";
 import wcpBadgeInAdmin from "./assets/wcp-badge-in-admin.png";
 import hcmsAcfReferenceField from "./assets/hcms-acf-reference-field.png";
+import hcmsTrashBinOverview from "./assets/hcms-trash-bin-overview.gif";
 import pbDuplicatePage from "./assets/pb-duplicate-page.png";
 
 <GithubRelease version={"5.40.0"} />
@@ -27,6 +28,35 @@ Essentially, we've removed a couple of older methods used for subscribing to lif
 For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
 
 ## Headless CMS
+
+### Introducing Trash Bin ([#3976](https://github.com/webiny/webiny-js/pull/3976) - [#4059](https://github.com/webiny/webiny-js/pull/4059))
+
+With this release, we are introducing the robust and indispensable Trash Bin feature for Headless CMS, ensuring that valuable data is always recoverable.
+
+<Image src={hcmsTrashBinOverview} title={"Trash Bin for Headless CMS"} />
+
+#### Key Features
+
+* **Soft Deletion**: users can move entries to the Trash Bin instead of permanent deletion, preserving data integrity.
+* **Efficient Navigation**: the Trash Bin is conveniently located at the bottom left-hand side of the app screen. Each content model has its own Trash Bin.
+* **User-Friendly Interface**: inside the Trash Bin, users can search, sort, and select records for restoration or permanent deletion using a familiar interface.
+* **Automated Cleanup**: to maintain system efficiency, a cron job empties the Trash Bin daily. Records older than 90 days are permanently purged during each cleanup.
+
+#### Customize Retention Period
+
+To customize how long deleted entries are kept, developers can adjust two environment variables. For instance, if you want to set the retention period to 7 days, follow these steps:
+
+1. Open the .env file.
+2. Add these lines:
+
+```
+WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=7
+WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS=7
+```
+
+3. Deploy the project.
+
+If you set both variables to 0, the default retention period will be used.
 
 ### Support for Reference Fields in Advanced Search Filter ([#3783](https://github.com/webiny/webiny-js/pull/3783))
 
