docs: specify env variables

--- a/docs/developer-docs/5.40.x/core-development-concepts/basics/environment-variables.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/basics/environment-variables.mdx
@@ -169,7 +169,7 @@ x-webiny-version: 5.21.0
 
 To manage how long deleted entries are retained within Webiny, developers can configure the retention period using two environment variables. 
 
-Both variables are necessary for comprehensive customization: 
+Both variables are necessary and they should be the same:
 
 - `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS` dictates how long deleted entries persist.
 - `WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS` controls the feedback notice that appears in the admin.
@@ -180,7 +180,7 @@ When adjusting these variables, such as setting both to 7 days, deleted entries 
 WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=7
 WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS=7
 ```
-For instance, setting both variables to 0 will result in the default retention period being applied.
+For instance, setting both variables to 0 will result in the default retention period of 90 days being applied.
 
 ## FAQ
 
