migrated the advance filter under advance guide and minor updated to role and user creation guide

--- a/docs/user-guides/5.39.x/security/essentials/user-creation.mdx
+++ b/docs/user-guides/5.39.x/security/essentials/user-creation.mdx
@@ -1,9 +1,8 @@
 ---
 id: 
-title: User Creation
-description: Learn how to create a User.
+title: Create a User
+description: Learn how to create a user.
 ---
-
 import { Alert } from "@/components/Alert";
 import userCreationVideo from "./assets/user-creation/create-user.mp4";
 
@@ -13,7 +12,8 @@ import userCreationVideo from "./assets/user-creation/create-user.mp4";
 
 </Alert>
 
-Webiny allows you to add multiple users with different access permissions in your application. In this tutorial, we will learn how to create a User.
+Webiny users can access the admin application. You can assign users to specific roles or teams to grant them different levels of permissions and access within the application.
+In this guide, we will learn how to create a user, and here are additional guides that explain more about [Roles](/docs/{version}/user-guides/security/essentials/role-creation) and [Teams](/docs/{version}/user-guides/security/essentials/team-creation).
 
 <Video src={userCreationVideo} controls={true}/>
 
