docs: done minor improvements to role creation user guide

--- a/docs/user-guides/5.39.x/security/essentials/role-creation.mdx
+++ b/docs/user-guides/5.39.x/security/essentials/role-creation.mdx
@@ -5,22 +5,31 @@ description: Learn how to create a Role.
 ---
 
 import { Alert } from "@/components/Alert";
-import roleCreationVideo from "./assets/role-creation/create-user-role.mp4";
+import roleCreationVideo from "./assets/Role-creation/create-user-Role.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- how to create a role
-- how to define access permissions for a role
+- how to create a Role
+- how to define access permissions for a Role
 
 </Alert>
 
-Webiny enables you to add several users with varying access in your application. You can define the access permissions for a specific group of users by creating a Role.
+
+<Alert type="info" title="Can I use this?">
+
+
+In the Open Source version, you'll have basic roles and permissions, where users either have full access or no access to a particular application.  
+To access the advanced roles and permissions feature, you need a Webiny Enterprise or Webiny Business license.
+
+</Alert>
+
+You can manage access permissions for users with Roles. In a Role, you define various access permissions, and then assign this Role to users.
 In this tutorial, we will learn how to create a Role with custom access permission to the Headless CMS. We will do this in 2 steps:
 
 - Step 1: Create a Role.
 - Step 2: Define access permissions.
 
-As an example, we will create a user role with the following access permissions:
+As an example, we will create a Role with the following access permissions:
 
 - Permission to view and update a specific content model group.
 - Permission to view, create, and update all content models inside the content model group.
@@ -28,7 +37,7 @@ As an example, we will create a user role with the following access permissions:
 
 ## Prerequisites
 
-To follow this tutorial, you need to have a content model group named **E-commerce** in your Webiny instance. If you don't have it, please follow the [Create Content Model Group](/docs/{version}/user-guides/security/essentials/role-creation) tutorial to create it.
+To follow this tutorial, you need to have a content model group named **E-commerce** in your Webiny instance. If you don't have it, please follow the [Create Content Model Group](/docs/{version}/user-guides/security/essentials/Role-creation) tutorial to create it.
 
 <Video src={roleCreationVideo} controls={true}/>
 
@@ -38,13 +47,13 @@ To follow this tutorial, you need to have a content model group named **E-commer
 
 2. Click **+ NEW ROLE**.
 
-   ✔️ The form to create a new user role opens.
+   ✔️ The form to create a new Role opens.
 
 3. In the **Name** textbox, type **E-Commerce**.
 
 4. In the **Slug** textbox, type **e-commerce**.
 
-5. In the **Description** textbox, type **User role for E-Commerce Managers**.
+5. In the **Description** textbox, type **User Role for E-Commerce Managers**.
 
 
 ## Step 2: Define Access Permissions
