feat: create custom file preview article

--- a/docs/release-notes/5.40.0/deprecated-apis.mdx
+++ b/docs/release-notes/5.40.0/deprecated-apis.mdx
@@ -14,7 +14,9 @@ In this guide, we'll go through the list of deprecated APIs and their replacemen
 
 ## Headless CMS
 
-We've removed a set of security permissions checking-related methods that were accessible via the `context.cms.permissions` object. To provide more context, here's an example of how the object could've been used in a simple `CmsGraphQLSchemaPlugin` plugin:
+### Removed Methods Related to Checking Security Permissions (Performing Authorization)
+
+We've removed a set of methods related to checking security permissions (pPerforming authorization) that were accessible via the `context.cms.permissions` object. To provide more context, here's an example of how the object could've been used in a simple `CmsGraphQLSchemaPlugin` plugin:
 
 ```ts
 import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";
@@ -91,6 +93,12 @@ new CmsGraphQLSchemaPlugin<Context>({
   }
 });
 ```
+
+### Renamed `createCmsModel` and `createCmsGroup` Plugin Factory Functions
+
+We've renamed the `createCmsModel` and `createCmsGroup` plugin factory functions to `createCmsModelPlugin` and `createCmsGroupPlugin`. By having a more explicit name of the function, we're making it more clear what the function actually does.
+
+With the 5.40.0 release, the old functions will be still available, but do note that they will be removed in the upcoming quarterly (5.41.0) release.
 
 ## Page Builder
 
@@ -177,3 +185,7 @@ Multiple legacy methods used for subscribing to I18N application's lifecycle eve
 | ----------------- | ------------------------------------------ | ----------------------- |
 | `onBeforeInstall` | Triggered before Page Builder is installed | `onSystemBeforeInstall` |
 | `onAfterInstall`  | Triggered after Page Builder is installed  | `onSystemAfterInstall`  |
+
+## File Manager
+
+FileManagerFileTypePlugin
