fix: add "Can be `null`" field

--- a/docs/developer-docs/5.40.x/headless-cms/references/date-time-and-identity-meta-fields.mdx
+++ b/docs/developer-docs/5.40.x/headless-cms/references/date-time-and-identity-meta-fields.mdx
@@ -55,7 +55,7 @@ They can also use them in their custom JavaScript (TypeScript) code, for example
 new ContextPlugin<CmsContext>(async context => {
   context.cms.onEntryAfterDelete.subscribe(async ({ entry }) => {
     console.log(`Entry created by ${entry.createdBy.displayName} was deleted.`);
-    console.log(`Note that entry was last published on ${entry.lastPublishedOn}.`)
+    console.log(`Note that entry was last published on ${entry.lastPublishedOn}.`);
   });
 });
 ```
@@ -74,41 +74,41 @@ The following table lists all the date/time and identity-related meta fields tha
 
 ### Revision-level Meta Fields
 
-| Field                      | Description                                                                     |
-|----------------------------|---------------------------------------------------------------------------------|
-| `revisionCreatedOn`        | The date/time when an entry revision was created.                               |
-| `revisionModifiedOn`       | The date/time when an entry revision was last modified.                         |
-| `revisionSavedOn`          | The date/time when an entry revision was last saved.                            |
-| `revisionFirstPublishedOn` | The date/time when an entry revision was first published.                       |
-| `revisionLastPublishedOn`  | The date/time when an entry revision was last published.                        |
-| `revisionDeletedOn`        | The date/time when an entry revision was last deleted / moved to the trash bin. |
-| `revisionRestoredOn`       | The date/time when an entry revision was last restored from the trash bin.      |
-| `revisionCreatedBy`        | The user who created an entry revision.                                         |
-| `revisionModifiedBy`       | The user who last modified an entry revision.                                   |
-| `revisionSavedBy`          | The user who last saved an entry revision.                                      |
-| `revisionFirstPublishedBy` | The user who first published an entry revision.                                 |
-| `revisionLastPublishedBy`  | The user who last published an entry revision.                                  |
-| `revisionDeletedBy`        | The user who last deleted / moved to the trash bin an entry revision.           |
-| `revisionRestoredBy`       | The user who last restored an entry revision from the trash bin.                |
+| Field                      | Description                                                                     | Can be `null` |
+| -------------------------- | ------------------------------------------------------------------------------- | ------------- |
+| `revisionCreatedOn`        | The date/time when an entry revision was created.                               | No            |
+| `revisionModifiedOn`       | The date/time when an entry revision was last modified.                         | Yes           |
+| `revisionSavedOn`          | The date/time when an entry revision was last saved.                            | No            |
+| `revisionFirstPublishedOn` | The date/time when an entry revision was first published.                       | Yes           |
+| `revisionLastPublishedOn`  | The date/time when an entry revision was last published.                        | Yes           |
+| `revisionDeletedOn`        | The date/time when an entry revision was last deleted / moved to the trash bin. | Yes           |
+| `revisionRestoredOn`       | The date/time when an entry revision was last restored from the trash bin.      | Yes           |
+| `revisionCreatedBy`        | The user who created an entry revision.                                         | No            |
+| `revisionModifiedBy`       | The user who last modified an entry revision.                                   | Yes           |
+| `revisionSavedBy`          | The user who last saved an entry revision.                                      | No            |
+| `revisionFirstPublishedBy` | The user who first published an entry revision.                                 | Yes           |
+| `revisionLastPublishedBy`  | The user who last published an entry revision.                                  | Yes           |
+| `revisionDeletedBy`        | The user who last deleted / moved to the trash bin an entry revision.           | Yes           |
+| `revisionRestoredBy`       | The user who last restored an entry revision from the trash bin.                | Yes           |
 
 ### Entry-level Meta Fields
 
-| Field              | Description                                                            |
-|--------------------|------------------------------------------------------------------------|
-| `createdOn`        | The date/time when an entry was created.                               |
-| `modifiedOn`       | The date/time when an entry was last modified.                         |
-| `savedOn`          | The date/time when an entry was last saved.                            |
-| `firstPublishedOn` | The date/time when an entry was first published.                       |
-| `lastPublishedOn`  | The date/time when an entry was last published.                        |
-| `deletedOn`        | The date/time when an entry was last deleted / moved to the trash bin. |
-| `restoredOn`       | The date/time when an entry was last restored from the trash bin.      |
-| `createdBy`        | The user who created an entry.                                         |
-| `modifiedBy`       | The user who last modified an entry.                                   |
-| `savedBy`          | The user who last saved an entry.                                      |
-| `firstPublishedBy` | The user who first published an entry.                                 |
-| `lastPublishedBy`  | The user who last published an entry.                                  |
-| `deletedBy`        | The user who last deleted / moved to the trash bin an entry.           |
-| `restoredBy`       | The user who last restored an entry from the trash bin.                |
+| Field              | Description                                                            | Can be `null` |
+| ------------------ | ---------------------------------------------------------------------- | ------------- |
+| `createdOn`        | The date/time when an entry was created.                               | No            |
+| `modifiedOn`       | The date/time when an entry was last modified.                         | Yes           |
+| `savedOn`          | The date/time when an entry was last saved.                            | No            |
+| `firstPublishedOn` | The date/time when an entry was first published.                       | Yes           |
+| `lastPublishedOn`  | The date/time when an entry was last published.                        | Yes           |
+| `deletedOn`        | The date/time when an entry was last deleted / moved to the trash bin. | Yes           |
+| `restoredOn`       | The date/time when an entry was last restored from the trash bin.      | Yes           |
+| `createdBy`        | The user who created an entry.                                         | No            |
+| `modifiedBy`       | The user who last modified an entry.                                   | Yes           |
+| `savedBy`          | The user who last saved an entry.                                      | No            |
+| `firstPublishedBy` | The user who first published an entry.                                 | Yes           |
+| `lastPublishedBy`  | The user who last published an entry.                                  | Yes           |
+| `deletedBy`        | The user who last deleted / moved to the trash bin an entry.           | Yes           |
+| `restoredBy`       | The user who last restored an entry from the trash bin.                | Yes           |
 
 ## FAQ
 
