--- a/docs/developer-docs/5.29.x/admin-area/extending/change-logo.mdx
+++ b/docs/developer-docs/5.29.x/admin-area/extending/change-logo.mdx
@@ -34,7 +34,7 @@ To replace the logo, go to `apps/admin/src/App.tsx` in your Webiny project, and 
 
 ```tsx apps/admin/src/App.tsx
 import React from "react";
-import { Admin, Plugins, AddLogo } from "@webiny/app-serverless-cms";
+import { Admin, AddLogo } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
 import "./App.scss";
 
