--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -27,6 +27,17 @@ Essentially, we've removed a couple of older methods used for subscribing to lif
 
 For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
 
+### Updated Webiny To Use React 18 ([#3771](https://github.com/webiny/webiny-js/pull/3771))
+
+With this release, we've updated Webiny to use React 18 (v18.2.0).
+This is a really large codebase update, and it may introduce breaking changes in your project.
+
+Most notably, we updated the [RMWC](https://github.com/rmwc/rmwc) package from version 8.x to version `14.2.2`, as the version 8 did not work with React 18.
+
+Please check your project for any issues and update your code accordingly.
+
+If you find any Webiny related issues, please report it on our Slack channel or GitHub repository.
+
 ## Headless CMS
 
 ### Introducing Trash Bin ([#3976](https://github.com/webiny/webiny-js/pull/3976) - [#4059](https://github.com/webiny/webiny-js/pull/4059))
