--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
@@ -4,9 +4,9 @@ title: Customize File Preview
 description: Learn how to customize file preview for specific types of files.
 ---
 
-import fmFileDetailsGroupFields from "./assets/fm-group-fields.png";
-
 import fmFilesPreviews from "./assets/fm-files-previews.png";
+import fmFilesPreviewsVideo from "./assets/fm-files-previews-video.png";
+import fmFilesPreviewsVideo2 from "./assets/fm-files-previews-video-2.png";
 
 <CanIUseThis since={"5.40.0"} />
 
@@ -18,21 +18,15 @@ import fmFilesPreviews from "./assets/fm-files-previews.png";
 
 ## Overview
 
-In File Manager, every file has a preview. For example, in the following screenshot, we can see that the second image file has a small thumbnail immediately shown to the user. This makes it easier to quickly identity the file the user is looking for.
+In File Manager, every file has a preview. For example, in the following screenshot, we can see that the image file on the left has a small thumbnail immediately shown to the user. This makes it easier to quickly identity the file the user is looking for.
 
 <Image src={fmFilesPreviews} title="Preview of Files" />
 
-On the other hand, the first video file does not have any preview being displayed, simply because this functionality is not available out of the box. 
+On the other hand, the video file on the right does not have any preview being displayed, simply because this functionality is not available out of the box.
 
-But, if required, this can be implemented, which is what we cover in this article. 
+But, if required, this can be implemented, which is what we cover in this article.
 
-## Getting Started
-
-To get started, we first scaffold a new Admin extension in the `/extensions/customFilePreview` folder, via the following command:     
-
-```bash
-yarn webiny scaffold new-extension --type admin --name customFilePreview
-```
+<ExtensionsGettingStarted type={"admin"} name={"customFilePreview"} dependencies={"@webiny/app-file-manager"} />
 
 ## File Preview For Specific File Type
 
@@ -46,55 +40,57 @@ import { FileManagerViewConfig, useFile } from "@webiny/app-file-manager";
 const { Browser, FileDetails } = FileManagerViewConfig;
 
 const VideoQtFileType = () => {
-    const { file } = useFile();
-    return (
-        <div>
-            <p style={{ fontSize: 50 }}>📽️</p>
-            <br />
-            <p>{file.name}</p>
-            <p>{file.size} bytes</p>
-        </div>
-    );
+  // The `useFile` hook gives us access to the file that is being rendered.
+  const { file } = useFile();
+  return (
+    <div>
+      <p style={{ fontSize: 50 }}>📽️</p>
+      <br />
+      <p>{file.name}</p>
+      <p>{file.size} bytes</p>
+    </div>
+  );
 };
 
 export const createExtension = () => {
-    return (
-        <>
-            <FileManagerViewConfig>
-                {/* Ensures custom preview is applied in file browser (grid view). */}
-                <Browser.Grid.Item.Thumbnail
-                    type={"video/quicktime"}
-                    element={<VideoQtFileType />}
-                />
+  return (
+    <>
+      <FileManagerViewConfig>
+        {/* Ensures custom preview is applied in file browser (grid view). */}
+        <Browser.Grid.Item.Thumbnail type={"video/quicktime"} element={<VideoQtFileType />} />
 
-                {/* Ensures custom preview is applied in file details. */}
-                <FileDetails.Preview.Thumbnail
-                    type={"video/quicktime"}
-                    element={<VideoQtFileType />}
-                />
-            </FileManagerViewConfig>
-        </>
-    );
+        {/* Ensures custom preview is applied in file details. */}
+        <FileDetails.Preview.Thumbnail type={"video/quicktime"} element={<VideoQtFileType />} />
+      </FileManagerViewConfig>
+    </>
+  );
 };
 ```
 
+With this code in place, the video file will now have a custom preview, both in the file browser (grid view) and in the file details view.
+
+<Image src={fmFilesPreviewsVideo} title="Custom Preview of a Video File - File Browser" />
+
+<Image src={fmFilesPreviewsVideo2} title="Custom Preview of a Video File - File Details" />
+
 ## Using Glob Patterns
 
-It's worth pointing out that the `type` property of `Browser.Grid.Item.Thumbnail` and `FileDetails.Preview.Thumbnail` components also accepts a [glob](https://en.wikipedia.org/wiki/Glob_(programming)) pattern. This makes it easier to assign a custom file preview for multiple types of files.  
+It's worth pointing out that the `type` property of `Browser.Grid.Item.Thumbnail` and `FileDetails.Preview.Thumbnail` components also accepts a [glob](<https://en.wikipedia.org/wiki/Glob_(programming)>) pattern. This makes it easier to assign a custom file preview for multiple types of files.
 
 In the following example, we're using `video/*` as the file type, in order to have our custom file preview being used for all video types of files.
 
 ```tsx
 <FileManagerViewConfig>
-    {/* Ensures custom preview is applied in file browser (grid view). */}
-    <Browser.Grid.Item.Thumbnail type={"video/*"} element={<VideoQtFileType />} />
+  {/* Ensures custom preview is applied in file browser (grid view). */}
+  <Browser.Grid.Item.Thumbnail type={"video/*"} element={<VideoQtFileType />} />
 
-    {/* Ensures custom preview is applied in file details. */}
-    <FileDetails.Preview.Thumbnail type={"video/*"} element={<VideoQtFileType />} />
-</FileManagerViewConfig>;
+  {/* Ensures custom preview is applied in file details. */}
+  <FileDetails.Preview.Thumbnail type={"video/*"} element={<VideoQtFileType />} />
+</FileManagerViewConfig>
 ```
+
 <Alert type={"info"}>
 
-  Internally, glob matching is performed using the [minimatch](https://www.npmjs.com/package/minimatch) library.
+Internally, glob matching is performed using the [minimatch](https://www.npmjs.com/package/minimatch) library.
 
 </Alert>
