feat: update file preview / file actions articles

--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
@@ -18,7 +18,9 @@ import fmFilesPreviewsVideo2 from "./assets/fm-files-previews-video-2.png";
 
 ## Overview
 
-In File Manager, every file has a preview. For example, in the following screenshot, we can see that the image file on the left has a small thumbnail immediately shown to the user. This makes it easier to quickly identity the file the user is looking for.
+In File Manager, every file has a preview that is shown to the user when browsing files. This preview is a small thumbnail that gives the user a quick overview of the file content. 
+
+For example, in the following screenshot, we can see that the image file on the left has a small thumbnail immediately shown to the user. This makes it easier to quickly identity the file the user is looking for.
 
 <Image src={fmFilesPreviews} title="Preview of Files" />
 
