feat: update release notes

--- a/docs/release-notes/5.40.0/removed-apis.mdx
+++ b/docs/release-notes/5.40.0/removed-apis.mdx
@@ -1,14 +1,14 @@
 ---
 id: cd0e6f97
-title: Deprecated APIs
-description: Learn about the deprecated APIs and their replacements in this guide.
+title: Removed APIs
+description: Learn about the removed APIs in the 5.40.0 release and their replacements.
 ---
 
 import { Alert } from "@/components/Alert";
 
 ## Overview
 
-As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases.
+As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of frontend and backend JavaScript APIs that were marked as deprecated in previous releases.
 
 In this guide, we'll go through the list of deprecated APIs and their replacements.
 
@@ -188,4 +188,11 @@ Multiple legacy methods used for subscribing to I18N application's lifecycle eve
 
 ## File Manager
 
-FileManagerFileTypePlugin
+### Removed `FileManagerFileTypePlugin` Class
+
+We've removed the `FileManagerFileTypePlugin` class, which was used to define custom file types in File Manager. More specifically, the class enabled developers to introduce custom file preview and custom file actions for all files of a specific type.
+
+With this release, instead of using the `FileManagerFileTypePlugin` class, developers are encouraged to implement custom file preview and custom file actions using the new React components, both of which is covered in the following guides:
+
+- [Custom File Preview](/docs/file-manager/extending/customize-file-preview)
+- [Custom File Actions](/docs/file-manager/extending/customize-file-actions)
