--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -21,11 +21,9 @@ import pbDuplicatePage from "./assets/pb-duplicate-page.png";
 
 ### Removed Deprecated APIs ([#4051](https://github.com/webiny/webiny-js/pull/4051))
 
-With this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases.
+With this release, we've removed a couple of frontend and backend JavaScript APIs that were marked as deprecated in previous releases.
 
-Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks.
-
-For more information and how to migrate your code, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article.
+For more information and how to migrate your code, please refer to the separate [Removed APIs](/docs/release-notes/5.40.0/removed-apis) article.
 
 ### Updated Webiny To Use React 18 ([#3771](https://github.com/webiny/webiny-js/pull/3771))
 
@@ -88,6 +86,18 @@ Previously, the functionality was available exclusively within the page details 
 <Image src={pbDuplicatePage} title={"Duplicate list and bulk action"} />
 
 ## Other Improvements
+
+### ✍️ Introducing Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+
+✍️
+
+### ✍️ allow-local-state-files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
+
+✍️
+
+### ✍️ Introducing the `extensions` Folder and the New Extension Scaffold ([#4111](https://github.com/webiny/webiny-js/pull/4111))
+
+✍️
 
 ### Webiny CLI and `create-webiny-project` ([#4045](https://github.com/webiny/webiny-js/pull/4045))
 
